main/default/objects/Training_Plan_Batch_Operation__c/Training_Plan_Batch_Operation__c.object-meta.xml
<CustomObject>
    <label>Training Plan Batch Operation</label>
    <nameField>
        <displayFormat>TPBO-{0000000}</displayFormat>
        <label>Training Plan Batch Operation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Plan Batch Operations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>