main/default/objects/Training_Plan_Batch_Operation__c/fields/Successes__c.field-meta.xml
<CustomField>
    <fullName>Successes__c</fullName>
    <label>Successes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>