main/default/objects/Training_Plan_Batch_Operation__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <picklist>
        <picklistValues>
            <fullName>Upsert Assignments</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Delete Assignments</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Update Assignments</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Re-calculate Assignments</fullName>
        </picklistValues>
    </picklist>
    <type>Picklist</type>
</CustomField>